--- a/canvas实现水印/index.html
+++ b/canvas实现水印/index.html
@@ -12,6 +12,8 @@
     <canvas id="canvas">
     </canvas>
     <div>程月嘉</div>
+    <a target="_blank" href="https://blog.csdn.net/coderhhan/article/details/114737654">使用git 命令出现 fatal: unable to access ‘http://github.com****的问题</a>
+   <a target="_blank" href="https://blog.csdn.net/m0_51269961/article/details/123709195">OpenSSL SSL_read: Connection was reset, errno 10054</a>
 </body>
 </html>
 <script>
@@ -30,10 +32,6 @@
         waterWapper.setAttribute('style', style)
     }
     drawWater();
-    // function callback() { 
-    //     console.log('   2345',1231)
-    //     drawWater()
-    //  };
     const observe = new MutationObserver(drawWater);
     const trage=waterWapper;
     const option= { attributes: true }
