--- a/canvas实现水印/index.html
+++ b/canvas实现水印/index.html
@@ -15,25 +15,27 @@
         color: #b238d6;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
-    #mainContent{
-      width: 80%;
-      height: 90%;
-      padding: 10px;
-      background: #f9dbf4;    
+
+    #mainContent {
+        width: 80%;
+        height: 90%;
+        padding: 10px;
+        background: #f9dbf4;
     }
-    a{
+
+    a {
         display: inline-block;
         margin-bottom: 10px;
         text-decoration: none;
-       
+
     }
-    a:hover{
-            color: #ffffff;
+
+    a:hover {
+        color: #ffffff;
     }
 </style>
 
 <body id="waterWapper">
-<<<<<<< HEAD
     <div id="mainContent">
         <canvas id="canvas">
         </canvas>
@@ -41,15 +43,13 @@
         <h2>2022.09.13 1.今天学习了git的安装</h2>
         <a target="_blank" href="https://zhuanlan.zhihu.com/p/443527549">Git下载安装教程：git安装步骤手把手图文【超详细】</a><br>
         <a target="_blank" href="https://www.runoob.com/w3cnote/html5-canvas-intro.html">学习 HTML5 Canvas 这一篇文章就够了</a>
+        <a target="_blank" href="https://blog.csdn.net/coderhhan/article/details/114737654">使用git 命令出现 fatal: unable to
+            access ‘http://github.com****的问题</a>
+        <a target="_blank" href="https://blog.csdn.net/m0_51269961/article/details/123709195">OpenSSL SSL_read:
+            Connection was reset, errno 10054</a>
     </div>
-=======
-    <canvas id="canvas">
-    </canvas>
-    <div>程月嘉</div>
-    <a target="_blank" href="https://blog.csdn.net/coderhhan/article/details/114737654">使用git 命令出现 fatal: unable to access ‘http://github.com****的问题</a>
-   <a target="_blank" href="https://blog.csdn.net/m0_51269961/article/details/123709195">OpenSSL SSL_read: Connection was reset, errno 10054</a>
->>>>>>> 20220913work1
 </body>
+
 </html>
 <script>
     function drawWater() {
