--- a/canvas实现水印/index.html
+++ b/canvas实现水印/index.html
@@ -11,7 +11,7 @@
 <body id="waterWapper">
     <canvas id="canvas">
     </canvas>
-    <div>程月嘉</div>
+    <h1 id="mianContent">程月嘉<img src='./image/女神.jpg' width="50" height="50"/></h1>
    <a target="_blank" href="https://blog.csdn.net/weixin_49851451/article/details/123944431">GIT常用命令大全——赶紧收藏</a>
     <a target="_blank" href="https://blog.csdn.net/coderhhan/article/details/114737654">使用git 命令出现 fatal: unable to access ‘http://github.com****的问题</a>
    <a target="_blank" href="https://blog.csdn.net/m0_51269961/article/details/123709195">OpenSSL SSL_read: Connection was reset, errno 10054</a>
