--- a/canvas实现水印/index.html
+++ b/canvas实现水印/index.html
@@ -27,36 +27,31 @@
         display: inline-block;
         margin-bottom: 10px;
         text-decoration: none;
-
     }
-
     a:hover {
         color: #ffffff;
+    }
+    img{
+        float: left;
+        margin-right: 10px;
+        vertical-align: top;
+        border-radius: 50px;
     }
 </style>
 
 <body id="waterWapper">
-<<<<<<< HEAD
     <div id="mainContent">
         <canvas id="canvas">
         </canvas>
-        <h1>程月嘉</h1>
+        <h1>程月嘉<img src='./image/女神.jpg' width="50" height="50" /></h1>
         <h2>2022.09.13 1.今天学习了git的安装</h2>
         <a target="_blank" href="https://zhuanlan.zhihu.com/p/443527549">Git下载安装教程：git安装步骤手把手图文【超详细】</a><br>
-        <a target="_blank" href="https://www.runoob.com/w3cnote/html5-canvas-intro.html">学习 HTML5 Canvas 这一篇文章就够了</a>
+        <a target="_blank" href="https://blog.csdn.net/weixin_49851451/article/details/123944431">GIT常用命令大全——赶紧收藏</a><br>
         <a target="_blank" href="https://blog.csdn.net/coderhhan/article/details/114737654">使用git 命令出现 fatal: unable to
-            access ‘http://github.com****的问题</a>
+            access ‘http://github.com****的问题</a><br>
         <a target="_blank" href="https://blog.csdn.net/m0_51269961/article/details/123709195">OpenSSL SSL_read:
             Connection was reset, errno 10054</a>
     </div>
-=======
-    <canvas id="canvas">
-    </canvas>
-    <h1 id="mianContent">程月嘉<img src='./image/女神.jpg' width="50" height="50"/></h1>
-   <a target="_blank" href="https://blog.csdn.net/weixin_49851451/article/details/123944431">GIT常用命令大全——赶紧收藏</a>
-    <a target="_blank" href="https://blog.csdn.net/coderhhan/article/details/114737654">使用git 命令出现 fatal: unable to access ‘http://github.com****的问题</a>
-   <a target="_blank" href="https://blog.csdn.net/m0_51269961/article/details/123709195">OpenSSL SSL_read: Connection was reset, errno 10054</a>
->>>>>>> bf7b5e7a6b4c5a93274e2ca853d1f77c36778f7d
 </body>
 
 </html>
