git push -u origin 分支名称

--- a/canvas实现水印/index.html
+++ b/canvas实现水印/index.html
@@ -45,6 +45,7 @@
         </canvas>
         <h1>程月嘉<img src='./image/女神.jpg' width="50" height="50" /></h1>
         <h2>2022.09.13 1.今天学习了git的安装</h2>
+        <h2>创建一个新分支 第一次推送 要用git push -u origin 分支名</h2>
         <a target="_blank" href="https://zhuanlan.zhihu.com/p/443527549">Git下载安装教程：git安装步骤手把手图文【超详细】</a><br>
         <a target="_blank" href="https://blog.csdn.net/weixin_49851451/article/details/123944431">GIT常用命令大全——赶紧收藏</a><br>
         <a target="_blank" href="https://blog.csdn.net/coderhhan/article/details/114737654">使用git 命令出现 fatal: unable to
